--- a/Snipping OCR/App.config
+++ b/Snipping OCR/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="Hotkey" value="CTRL+SHIFT+C"/>
+    <add key="Hotkey" value="CTRL+SHIFT+A"/>
   </appSettings>
     <startup> 
       <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
